# uv-starter

./: .gitignore  01-hello.ipynb  LICENSE  README.md  example.py  main.py  pydantic-ai-with-ollama.py  pyproject.toml
